# ship-il-sdk

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: get-wb-thermal-or-a4-for-print.py  getclosestpoints.py  insertpickupshipmentex.py
src/ship_il_sdk/: __init__.py  async_client.py  auth.py  client.py  config.py  contracts.py  exceptions.py  logging.py  shipment_preparation.py  token_manager.py
src/ship_il_sdk/endpoints/: __init__.py  labels.py  points.py  shipments.py  specs.py
src/ship_il_sdk/models/: __init__.py  points.py  shipments.py
src/ship_il_sdk/transport/: __init__.py  parsing.py  retry.py
tests/: test_basic.py  test_contracts.py  test_models.py  test_preparation.py
